--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-xsd-tree",
   "private": false,
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "type": "module",
   "files": [
     "dist"
