--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "react-xsd-tree",
   "private": false,
-  "version": "1.0.1",
+  "version": "1.0.3",
   "type": "module",
   "files": [
-    "dist"
+    "dist",
+    "README.md",
+    "LICENSE",
+    "package.json"
   ],
   "exports": "./dist/index.js",
   "module": "./dist/index.js",
